# Pricy

./: .env  .gitignore  Dockerfile  README.md  models.py  notebook.ipynb  predict.py  pyproject.toml  train.py
